# DetectMateLibrary

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  anomalies.json  main.py  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/ISSUE_TEMPLATE/: 01_bug_report.md
.github/workflows/: codeql.yml  publish-docs.yml  python-app.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/basic_usage/: index.html
0.2.0/create_components/: index.html
0.2.0/detectors/: index.html
0.2.0/installation/: index.html
0.2.0/overall_architecture/: index.html
0.2.0/parsers/: index.html
0.2.0/schemas/: index.html
components/Base/: ConfigBase.py  DetectorBase.py  ParserBase.py
components/utils/: DataBuffer.py  Persistency.py
config/: NVD_audit_config.yaml  README.md  pipeline_config_default.yaml
demo/: Dockerfile.app1  Dockerfile.app2  README.md  compose.yaml  detectmate_detector.py  detectmate_parser.py  run_kafka.py
demo/data/: miranda_demo_config.yaml
development/: 404.html  diagrams.drawio  index.html  search.html  sitemap.xml
development/basic_idea/: index.html
development/basic_usage/: index.html
development/contribution/: index.html
development/create_components/: index.html
development/detectors/: index.html
development/development/: index.html
development/implement_components/: index.html
development/installation/: index.html
development/overall_architecture/: index.html
development/parsers/: index.html
development/schemas/: index.html
development/search/: search_index.json
docs/: DetectMate_architecture.drawio  basic_idea.md  basic_usage.md  contribution.md  create_components.md  detectors.md  development.md  diagrams.drawio  implement_components.md  index.md  installation.md  log_formats.md  overall_architecture.md  parsers.md  persistency_and_auto_configuration.md  schemas.md
docs/auxiliar/: input_buffer.md  persistency.md
docs/detectors/: combo.md  new_event.md  new_value.md  random_detector.md  rule_based.md
docs/helper/: from_to.md
docs/other/: log_formats.md
docs/parsers/: json_parser.md  logbatcher_parser.md  template_matcher.md  template_tree_matcher.md
examples/: DataBuffer.ipynb  config_pipeline.yaml  custom_detector.ipynb  example_config.yaml  example_config_usage.ipynb  example_detector_instance_config.yaml
notebooks/: persistency_demo.ipynb  reader_parser_detector.ipynb
schemas/: SchemaV0.py
src/components/: __init__.py  registry.py
src/config/: __init__.py  app_config.py  detectors.py  parsers.py
src/detectmatelibrary/: __init__.py  constants.py  exceptions.py
src/schemas/: __init__.py  _op.py  schemas.proto  schemas_pb2.py
src/tools/: logging.py
src/utils/: aux.py
tests/: test_CoreDetector.py  test_CoreParser.py  test_CoreReader.py  test_DataBuffer.py  test_NewValueDetector.py  test_TemplateMatcher.py  test_base.py  test_core.py  test_data_normalizer.py  test_pipelines.py  test_reader_basic.py  test_schemas.py
tests/test_common/: test_CoreDetector.py  test_CoreDetectorConfig.py  test_CoreParser.py  test_CoreReader.py  test_config.py  test_config_roundtrip.py  (+11 more)
(+212 files in other folders)
