[project]
name = "detectmatelibrary"
version = "0.1.0"
description = "DetectMate Library for log processing components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drain3>=0.9.11",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.36.1",
    "protobuf>=6.32.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "kafka-python>=2.3.0",
    "ujson>=5.11.0",
]

[project.optional-dependencies]
# add dependencies in this section with: uv add --optional dev <package>
# install with all the dev dependencies:  uv pip install -e .[dev]
dev = [
    "prek>=0.2.8",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mate = "tools.workspace.create_workspace:main"
