[project]
name = "detectmatelibrary"
version = "0.2.0"
description = "DetectMate Library for log processing components"
readme = "README.md"
dynamic = ["authors"]
requires-python = ">=3.12"
dependencies = [
    "protobuf>=6.32.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "openai>=2.26.0",
    "tenacity>=9.1.4",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.38.1",
    "detectmateperformance @ git+https://github.com/ait-detectmate/DetectMatePerformance@main",
]

[dependency-groups]
# add dependencies in this section with: uv add --optional dev <package>
# install with all the dev dependencies:  uv pip install -e .[dev]
dev = [
    "mike>=2.1.3",
    "prek>=0.2.8",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mate = "tools.workspace.create_workspace:main"

[[tool.mypy.overrides]]
module = "detectmatelibrary.schemas.schemas_pb2"
ignore_errors = true
